--- a/WPF_Main/Components/Forms/Testing/Testing_window.xaml
+++ b/WPF_Main/Components/Forms/Testing/Testing_window.xaml
@@ -9,7 +9,7 @@
     <Grid>
         <DockPanel Height="77" Margin="0,344.4,-4.4,-1.4" VerticalAlignment="Top" AutomationProperties.IsOffscreenBehavior="Offscreen" LastChildFill="False" FlowDirection="RightToLeft" Background="#B2F9F9F9">
             <Button x:Name="Check_button" Content="Проверить" Height="34" VerticalAlignment="Center" Width="112" Margin="68,16,0,18" HorizontalAlignment="Center" FontFamily="Times New Roman" FontSize="16" Click="Check_button_Click"/>
-            <Button x:Name="About_button" Content="Об обучении" Height="34" VerticalAlignment="Center" Width="150" Margin="64,20,15,23" HorizontalAlignment="Center" DockPanel.Dock="Right" FontFamily="Times New Roman" FontSize="16" Click="About_button_Click"/>
+            <Button x:Name="SaveNN_button" Content="Сохранить НС" Height="34" VerticalAlignment="Center" Width="150" Margin="64,20,15,23" HorizontalAlignment="Center" DockPanel.Dock="Right" FontFamily="Times New Roman" FontSize="16" Click="SaveNN_button_Click"/>
             <Button x:Name="Back_button" Content="Назад" Height="34" VerticalAlignment="Center" Width="112" Margin="37,20.5,0,22.5" HorizontalAlignment="Center" FontFamily="Times New Roman" FontSize="16" Click="Back_button_Click" />
         </DockPanel>
         <GroupBox Header="Проверка обучения
